initial fix on mobile layout

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -108,7 +108,7 @@
     .containerSign {
         background: rgba(0, 0, 0, 0.5);
         width: 100%;
-        margin-top: 10vh;
+        margin-top: 15vh;
         color: white;
         padding: 20px;
     }
@@ -116,16 +116,12 @@
     .containerLog {
         background: rgba(0, 0, 0, 0.5);
         width: 100%;
-        margin-top: 10vh;
+        margin-top: 30vh;
         color: white;
         padding: 20px;
     }
 
     .disappear {
-        display: none;
-    }
-    
-    label {
         display: none;
     }
 }
